# wine

./: .cvsignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  ALPHA-diffs  ALPHA-pl13.diff  ANNOUNCE  ANNOUNCE.md  AUTHORS  BUGS  COPYRIGHT  ChangeLog  Configure  Configure.old  DEVELOPERS-HINTS  Imakefile  LICENSE  MAINTAINERS  MELHORIAS_WINE_CLAUDE.md  Make.rules.in  Make.vars.in  Makefile  Makefile.in  Maketest.rules.in  NOTICES.md  PROPOSED_LICENSE  README  README.DEBUGGER  README.OEMANSI  README.esync  README.md  README_DOCUMENTACAO.md  RELEASE-NOTES  RESUMO_EXECUTIVO.txt  RESUMO_MELHORIAS.txt  VERSION  WARRANTY  (+70 more)
console/: Makefile.in  generic.c  interface.c  ncurses.c  tty.c  xterm.c
controls/: .cvsignore  EDIT.TODO  Imakefile  Makefile  Makefile.in  SmeMenuButtP.h  SmeMenuButto.c  SmeMenuButto.h  WinButton.c  WinButton.h  WinButtonP.h  WinCommand.c  WinCommand.h  WinCommandP.h  WinLabel.c  WinLabel.h  WinLabelP.h  WinMenuButtP.h  WinMenuButto.c  WinMenuButto.h  button.c  caption.c  combo.c  comctl32undoc.c  commctrl.c  desktop.c  edit.c  header.c  icontitle.c  listbox.c  listview.c  menu.c  oldlbox.c  pager.c  progress.c  rebar.c  scroll.c  static.c  status.c  toolbar.c  (+6 more)
debugger/: .cvsignore  Imakefile  Makefile  Makefile.in  README  TODO  bfd.h  break.c  db_disasm.c  db_disasm.h  dbg.y  dbgmain.c  debug.l  debugger.h  defs.h  display.c  dtest.c  editline.c  expr.c  expr.h  ext_debugger.c  external.c  gdbproxy.c  hash.c  i386-pinsn.c  info.c  intvar.h  memory.c  module.c  msc.c  obstack.h  registers.c  regpos.h  source.c  stabs.c  stack.c  types.c  winedbg.c  winedbg.spec
dlls/: .cvsignore  .gitignore  Makedll.rules.in  Makefile.in  Makeimplib.rules.in  Maketest.rules.in  make_dlls
documentation/: .cvsignore  .gitignore  ChangeLog.BETA  ChangeLog.OLD  HOWTO-winelib  Makefile.in  PACKAGING  README-de.md  README-es.md  README-fi.md  README-fr.md  README-hu.md  README-it.md  README-ja.md  README-ko.md  README-nl.md  README-no.md  README-pl.md  README-pt.md  README-pt_br.md  README-ru.md  README-sv.md  README-tr.md  README-uk.md  README-zh_cn.md  README.de  README.documentation  README.es  README.fi  README.fr  README.hu  README.it  README.ja  README.ko  README.nl  README.no  README.pt  README.pt_br  README.ru  README.sv  (+108 more)
etc/: Imakefile  Makefile  commdlg-ordinals  ddeml-ordinals  gdi-ordinals  lzexpand-ordinals  mmsystem-ordinals  netapi20-ordinals  olecli-ordinals  olesvr-ordinals  shell-ordinals  toolhelp-ordinals  user-ordinals  win87em-ordinals
files/: Makefile.in  async.c  change.c  directory.c  dos_fs.c  drive.c  file.c  profile.c  smb.c  smb.h  tape.c
fonts/: .cvsignore  .gitignore  Makefile.in  courier.sfd  fixedsys.sfd  fixedsys_jp.sfd  genttf.ff  marlett.sfd  ms_sans_serif.sfd  small_fonts.sfd  small_fonts_jp.sfd  symbol.sfd  system.sfd  tahoma.sfd  tahomabd.sfd  webdings.sfd  wine_courier.sfd  wine_marlett.sfd  wine_sans_serif.sfd  wine_system.sfd  wingding.sfd
graphics/: Makefile.in  bitblt.c  cache.c  d3d_private.h  d3dcommon.c  d3ddevices.c  d3dexecutebuffer.c  d3dlight.c  d3dmaterial.c  d3dtexture.c  d3dviewport.c  ddraw.c  ddraw_private.h  dispdib.c  driver.c  env.c  escape.c  fontengine.c  mapping.c  painting.c  path.c  vga.c  wing.c
if1632/: .cvsignore  Imakefile  Makefile  Makefile.in  advapi32.spec  builtin.c  call.S  callback.c  comctl32.spec  comdlg32.spec  commdlg.spec  compobj.spec  crtdll.spec  ddeml.spec  display.spec  dummy.c  except.S  findfunc  gdi.spec  gdi32.spec  kernel.spec  kernel32.spec  keyboard.spec  lz32.spec  lzexpand.spec  mmsystem.spec  mouse.spec  mpr.spec  msacm.spec  msvideo.spec  ntdll.spec  ole2.spec  ole2conv.spec  ole2disp.spec  ole2nls.spec  ole2prox.spec  ole32.spec  olecli.spec  olecli32.spec  olesvr.spec  (+34 more)
include/: .cvsignore  .gitignore  Imakefile  Makefile  Makefile.in  Makefile.in.orig  accctrl.h  accel.h  access.idl  acconfig.h  aclapi.h  aclui.h  activation.idl  activdbg.idl  activeds.h  activscp.h  activscp.idl  adshlp.h  advapi32.h  advpub.h  af_irda.h  afunix.h  alias.h  amaudio.h  amsi.idl  amstream.h  amstream.idl  amvideo.h  amvideo.idl  animate.h  appcompatapi.h  appmgmt.h  appmodel.h  appnotify.h  arch.h  asferr.h  aspi.h  asptlb.idl  async.h  asyncinfo.idl  (+1102 more)
ipc/: Imakefile  Makefile.in  README  TEST_FRAGMENT.std  bit_array.c  bit_array_test.c  dde.tex  dde_atom.c  dde_atom_test.c  dde_mem.c  dde_mem_test.c  dde_proc.c  dde_proc_test.c  generic_hash.c  generic_hash.h  hash_test.c  run_tests  shm_block.c  shm_fragment.c  shm_fragment_test.c  shm_main_blk.c  shm_semaph.c  shm_semaph_test.c  wine_test_stub.c
libs/: .cvsignore  .gitignore  Makefile.in  Makelib.rules.in
libtest/: .cvsignore  Makefile.in  README.rolex  expand.c  expand.spec  guitest.c  guitest.rc  guitest.rh  hello.c  hello.spec  hello2.c  hello2.spec  hello3.c  hello3.spec  hello3res.rc  hello4.c  hello4.spec  hello5.c  hello5.spec  new.c  new.spec  rolex.c  rolex.spec  vartest.c  vartest.readme  vartest.spec  volinfo.c  volinfo.spec
loader/: .cvsignore  .gitignore  Imakefile  Makefile  Makefile.in  builtin.c  cursor.c  dump.c  elf.c  elfdll.c  files.c  freebsd.c  glibc.c  int1a.c  int21.c  kthread.c  l_intl.nls  ldt.c  ldtlib.c  library.c  libres.c  loadorder.c  main.c  main.h  module.c  ne_image.c  ne_resource.c  pe_image.c  pe_resource.c  preloader.c  preloader.h  preloader_mac.c  pthread.c  resource.c  selector.c  signal.c  task.c  wine.c  wine.de.UTF-8.man.in  wine.de.man.in  (+10 more)
memory/: .cvsignore  Imakefile  Makefile  Makefile.in  atom.c  codepage.c  environ.c  global.c  heap.c  instr.c  ldt.c  linear.c  local.c  registry.c  selector.c  string.c  virtual.c
misc/: .cvsignore  Imakefile  Makefile  Makefile.in  aspi.c  atom.c  audio.c  bidi16.c  callback.c  cdrom.c  clipboard.c  comm.c  commdlg.c  compobj.c  cpu.c  crtdll.c  cursor.c  ddeml.c  debugstr.c  dos.c  dos_fs.c  driver.c  error.c  escape.c  exec.c  ext_debugger.c  file.c  fontengine.c  imagelist.c  imm.c  int21.c  kernel.c  kernel32.c  keyboard.c  lstr.c  lzexpand.c  main.c  mcianim.c  mcicda.c  message.c  (+46 more)
miscemu/: .cvsignore  (+26 more)
(+15403 files in other folders)
